# magnetometry-toolkit

./: .gitignore  CMakeGTest.txt  CMakeLists.txt  README.md
Common/: CMakeLists.txt
Common.Tests/: CMakeLists.txt
Common.Tests/include/: BitConverterTests.h
Common.Tests/src/: main.cpp
Common/Common/: Connection.h  DatabaseException.h  IniSettings.h  Macro.h  NotSupportedException.h
Common/src/: BitConverter.cpp  Connection.cpp  DataBatchInserter.cpp  DatabaseHelper.cpp  File.cpp  IniSettings.cpp  Logger.cpp
TestData/: data.mseed
common/: BitConverter.cpp  BitConverter.h  CMakeLists.txt  Common.h  Connection.cpp  Connection.h  DataBatchInserter.cpp  DataBatchInserter.h  DataConsistencyException.h  DataInserter.h  DatabaseException.h  DatabaseHelper.cpp  DatabaseHelper.h  Exception.h  File.cpp  File.h  FileException.h  Helpers.cpp  Helpers.h  IniSettings.cpp  IniSettings.h  InvalidOperationException.h  Logger.cpp  Logger.h  Macro.h  NotImplementedException.h  NotSupportedException.h  Path.cpp  Path.h  ProjectBase.h  Singleton.h  SmartPtr.h  Thread.h  common_automoc.cpp  moc_Thread.cpp
common.tests/: CMakeLists.txt
common.tests/include/: BitConverterTests.h
common.tests/src/: main.cpp
common.tests2/: common.tests.sln  common.tests.vcxproj  common.tests.vcxproj.filters
common.tests2/src/: main.cpp
common/Common/: BitConverter.h  DatabaseHelper.h  File.h  InvalidOperationException.h  Logger.h  NotImplementedException.h  Path.h
common/common/: BitConverter.h  Connection.h  DataBatchInserter.h  DataConsistencyException.h  DataInserter.h  DatabaseException.h  DatabaseHelper.h  Exception.h  File.h  FileException.h  Helpers.h  IniSettings.h  InvalidOperationException.h  Logger.h  NotImplementedException.h  NotSupportedException.h  Path.h  ProjectBase.h  Singleton.h  SmartPtr.h
common/src/: BitConverter.cpp  Connection.cpp  DataBatchInserter.cpp  DatabaseHelper.cpp  File.cpp  Helpers.cpp  IniSettings.cpp  Logger.cpp  Path.cpp
common2/: common.sln  common.vcxproj  common.vcxproj.filters
common2/Common/: Common.h  DataBatchInserter.h  DataInserter.h  Singleton.h  SmartPtr.h
core/: BaseDeviceController.cpp  BaseDeviceController.h  BufferedLogger.cpp  BufferedLogger.h  CMakeLists.txt  ChannelData.h  Common.h  EbDevice.cpp  EbDevice.h  EbDeviceManager.cpp  EbDeviceManager.h  FileBinaryStream.h  IBinaryStream.h  MSeedReader.cpp  MSeedRecord.h  MSeedSink.cpp  MSeedSink.h  MSeedWriter.cpp  MSeedWriter.h  PosController.cpp  PosController.h  PosDevice.cpp  PosDevice.h  PosWebCommands.h  PosWebHandler.cpp  PosWebHandler.h  Runner.cpp  Runner.h  RunnerActionHandler.cpp  RunnerActionHandler.h  RunnerCommands.h  RunnerData.h  SerialPortBinaryStream.h  WebServer.cpp  WebServer.h  WebServerActionHandler.cpp  WebServerActionHandler.h
core.tests/: BaseTest.cpp  BaseTest.h  CMakeLists.txt  EbDeviceTests.h  EnvironmentTests.h  Helpers.cpp  Helpers.h  JsonTests.h  MSeedWriterTests.h  PosDeviceTests.h  WebServerTests.h  config.test.ini  main.cpp  tests.h  tests.h.tt
core.tests/include/: tests.h  tests.h.tt
core.tests/src/: main.cpp
core/Greis/: AllCustomTypes.h  AllStdMessages.h  ChecksumComputer.h  CustomType.h  DataChunk.h  ECustomTypeId.h  EMessageId.h  EMessageKind.h  Epoch.h  FileBinaryStream.h  GreisBinarySerializer.h  GreisException.h  GreisMessageStream.h  GreisMysqlSerializer.h  GreisTypes.h  IBinaryStream.h  LoggingBinaryStream.h  Message.h  MySqlSink.h  MySqlSource.h  NonStdTextMessage.h  RawCustomType.h  RawStdMessage.h  SerialPortBinaryStream.h  StdMessage.h  StdMessageFactory.h
core/core/: ErrorManager.h  FileBinaryStream.h  IBinaryStream.h  MSeedReader.h  MSeedRecord.h  MSeedSettings.h  MSeedSink.h  MSeedWriter.h  SampleRange.h  Sedis.h  SerialPortBinaryStream.h
core/src/: ChecksumComputer.cpp  CustomType.cpp  DataChunk.cpp  GreisBinarySerializer.cpp  GreisMessageStream.cpp  MSeedReader.cpp  MSeedSink.cpp  MSeedWriter.cpp  MySqlSink.cpp  MySqlSource.cpp  NonStdTextMessage.cpp  RawStdMessage.cpp  Sedis.cpp  main.cpp  (+1 more)
gemlogd/: CMakeLists.txt  config.ini
libmseed/: CMakeLists.txt  Makefile  Makefile.win
libmseed/doc/: libmseed-UsersGuide
libmseed/example/: msview  result.mseed
libmseed/exampleVS/: otest.mseed
libmseed/exampleVS/examples/: examples.sln
libmseed/exampleVS/examples/msrepack/: 0000000000000000.mseed  convFile-1.mseed  msrepack.c  msrepack.vcproj
libmseed/ms_test/: Makefile.win  ms_test.c  ms_test.sln  ms_test.vcproj  myfile.mseed  readme.txt
libmseed/src/: libmseed.h  pack.c
logger/: CMakeLists.txt  config.ini
mongoose/: CMakeLists.txt
web/: .bowerrc  .eslintrc  Gruntfile.js  app.js  bower.json  config.js  gulpfile.js  package.json  webpack.config.js
(+158 files in other folders)
